# Local-RAG-Chatbot

./: .gitignore  README.md  app.py  config.py  loader.py  prompt.py  pyproject.toml  requirements.txt  retriever.py
