[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Minimal local RAG chatbot with Ollama and Gradio"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.3.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.5.0",
    "gradio>=5.0.0",
    "pypdf>=4.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "tiktoken>=0.7.0",
    "numpy>=1.24.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
